--- a/app/index.css
+++ b/app/index.css
@@ -1,26 +1,31 @@
-body{
+body {
 	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
 }
 
-ul{
+ul {
 	padding: 0;
 }
 
-li{
+li {
 	list-style-type: none;
 }
 
-.container{
+a {
+	text-decoration: none;
+	color: #d0021b;
+}
+
+.container {
 	max-width: 1200px;
 	margin: 0 auto;
 }
 
-.languages{
+.languages {
 	display: flex;
 	justify-content: center;
 }
 
-.languages li{
+.languages li {
 	margin: 10px;
 	font-weight: bold;
 	cursor: pointer;
@@ -49,4 +54,16 @@ li{
 .popular-rank {
 	font-size: 20px;
 	margin: 10px;
+}
+
+.nav {
+	display: flex;
+}
+
+.active {
+	font-weight: bold;
+}
+
+.nav li {
+	margin-right: 15px;
 }
