--- a/app/index.css
+++ b/app/index.css
@@ -31,6 +31,39 @@ a {
 	cursor: pointer;
 }
 
+.row {
+	display: flex;
+	justify-content: space-around;
+}
+
+.column {
+	display: flex;
+	flex-direction: column;
+	width: 500px;
+	align-items: center;
+}
+
+.column input {
+	border-radius: 3px;
+	margin: 10px 0;
+	padding: 5px;
+	border: 1px solid rgba(0, 0, 0, 0.43);
+	font-size: 16px;
+	width: 80%;
+}
+
+.column label {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 200;
+}
+
+.header {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 200;
+}
+
 .popular-list {
 	display: flex;
 	flex-wrap: wrap;
@@ -84,7 +117,7 @@ a {
 	text-align: center;
 	display: block;
 	padding: 7px 0;
-	margin: 10pz auto;
+	margin: 10px auto;
 }
 
 .button:hover:enabled {
@@ -95,4 +128,17 @@ a {
 
 .button:active {
   transform: translateY(1px);
+}
+
+.reset {
+	border: none;
+	background: transparent;
+	color: #d0021b;
+	display: block;
+	width: 100%;
+	text-align: center;
+}
+
+.reset:hover {
+	cursor: pointer;
 }
